--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,11 +10,19 @@ spring:
   #  session 失效时间
   session:
     timeout: 86400
-
+    store-type: redis
+  # redis
+  redis:
+    port: 6379
+    host: localhost
+    database: 1
 server:
   port: 8080
   servlet:
     context-path: /api
+    session:
+      cookie:
+        domain: 127.0.0.1
 # springdoc-openapi项目配置
 springdoc:
   swagger-ui:
