--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,12 @@
             <artifactId>spring-session-data-redis</artifactId>
             <version>3.0.0</version>
         </dependency>
-
+<!--        https://github.com/redisson/redisson#quick-start-->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.31.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
